# 1706_3_par_prog

./: README.md
Egorov/: Egorov_report.docx
Egorov/task1/Project1/: Project1.vcxproj  main.cpp
Egorov/task2/Project2/: Project2.sln
Egorov/task6/: threads_qs.sln
Kashina/CCSMatrix/: CCSMatrix.sln  CCSMatrix.vcxproj  Main.cpp  result.txt  source.txt
Kashina/CCS_omp/: CCS_omp.sln  CCS_omp.vcxproj  Source.cpp  matrix.txt  resMatrix.txt
Kashina/CCStbb/: CCStbb.sln  CCStbb.vcxproj  main.cpp
Kashina/task1/: MPI_Lab1.sln
Kashina/task3.0/: main.cpp  task3.vcxproj
Kashina/task3.1/: main.cpp  task3.sln  task3.vcxproj
Maremyanin/: Маремьянин И.А. Отчет.docx
Maremyanin/task5/: qssort2.sln
Maremyanin/task6/: qs_tbb.cpp
Petrov/task2/: mpi.sln
Polovinkin/otchet/: otchet.Strassen.Polovinkin.docx
Polovinkin/task5/: tbb2.sln
Polovinkin/testmpi/: testmpi.sln
Savin.D/report/: Savin381706-3_OpenMP_TBB.docx
Savin.D/task 2(Generalized transmission from one to all (scatter))/: integral.cpp  integral.vcxproj
Savin.D/task1 task1(Integration - Rect_Method)/: integral.cpp  integral.sln  integral.vcxproj  integral.vcxproj.filters
Savin.D/task3 integral 2.0/: integral.cpp
Savin.D/task_integral_OpenMP/: Source.cpp  test2.sln  test2.vcxproj
Savin.D/task_integral_TBB/: Source.cpp
Sokolov/: Отчет_Lab3_MPI_sokolov.docx  Соколов Н.А. Отчет по ПП 2 семестр 2.docx
Sokolov/PP_lab_Dikstra/: PP_lab_Dikstra.sln
kozinov/test_project_mpi/: CMakeLists.txt  Makefile
kozinov/test_project_mpi/cmake/: function.cmake
kozinov/test_project_mpi/main/: main.cpp
(+93 files in other folders)
